bookstore-app/k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bookstore
  template:
    metadata:
      labels:
        app: bookstore
    spec:
      containers:
      - name: api
        image: bookstore-api
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-service
spec:
  type: NodePort
  selector:
    app: bookstore
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007
